start preparing for offline development app - jobs_log_01

--- a/TEST/Test2/templates/reports.html
+++ b/TEST/Test2/templates/reports.html
@@ -109,7 +109,7 @@
 		    		<td>{{ d.id }}</td>
 		    		<td>{{ d.name }}</td>
 		    		<td>{{ d.profession }}</td>
-		    		<td>{{ d.salary }}</td>
+		    		<td>{{ d.salary.wage }}</td>
 	    		</tr>
 		    	{% endfor %}
 		    {% endif %}
