jobslog_01 (OFFLINE) version complete

--- a/TEST/Jobs_log_01 OFFLINE/templates/layout.html
+++ b/TEST/Jobs_log_01 OFFLINE/templates/layout.html
@@ -22,18 +22,10 @@
         }
     </style>
     <body>
-        
-        <div class="container">
+        {% block body %}
 
-            {% block body %}{% endblock %}
+        {% block content %}{% endblock %}
 
-            {% block content %}{% endblock %}
-
-            <!-- flash messages -->
-            {% for messages in get_flashed_messages() %}
-                {{ messages }}
-            {% endfor %}
-        </div>
-
+        {% endblock %}
     </body>
 </html>
