change homepage title

--- a/jobs-log/templates/homepage.html
+++ b/jobs-log/templates/homepage.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h4>Jobs Log 0.1 OFFLINE</h4>
-<h5>offline version of my jobs log.</h5>
+<h4>AV Jobs Log</h4>
+<h5>Save your data online and save yourself time!</h5>
 
 <h1>AV Jobs Log</h1>
 
