--- a/jobs-log/templates/layout.html
+++ b/jobs-log/templates/layout.html
@@ -20,8 +20,43 @@
         th {
             background-color: lightgray;
         }
+
+        body {
+          margin: 0;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .topnav {
+          overflow: hidden;
+          background-color: #333;
+        }
+
+        .topnav a {
+          float: left;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+        }
+
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
+
+        .topnav a.active {
+          background-color: #4CAF50;
+          color: white;
+        }
+
     </style>
     <body>
+        <div class="topnav">
+            <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('jobs_report') }}">Jobs Report</a>
+            <a href="{{ url_for('outcome_reports')}}">Outcome Reports</a>
+        </div>
         {% block body %}
 
         {% block content %}{% endblock %}
