--- a/jobs-log/templates/homepage.html
+++ b/jobs-log/templates/homepage.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h4>AV Jobs Log</h4>
-<h5>Save your data online and save yourself time!</h5>
 
-<h1>AV Jobs Log</h1>
+<h1>AVMI Jobs Log</h1>
+<h5>Save your data online and save yourself time!</h5>
+<br>
+<br>
 
 <p>Please enter your details <strong>below</strong>.</p>
 
